# data-mining-exercise

./: .dockerignore  .env.example  .gitignore  README.md  data-mining-exercise.code-workspace  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.development  docker-compose.development.yaml
src/crawler/: __main__.py
src/crawler/girls_channel/: topic.py
src/data_mining/: __main__.py
